--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -102,6 +102,12 @@ legend {
 	border-radius: 8px;
 }
 
+#garden a.active, a.hover {
+    background-color: #FFF1ED;
+	border-radius: 16px;
+	color: #F4714B;
+}
+
 html {
 	width: 100%;
     height: 100%;
